CICO-42489 fixes jumper background color so you can see where your jump-testing

--- a/zest_station/css/themes/circle-inn-fairfield/theme.less
+++ b/zest_station/css/themes/circle-inn-fairfield/theme.less
@@ -180,3 +180,6 @@
 		height: 45% !important;
 
 	}
+	.jumper {
+		background-color: #d6d6d6 !important;
+	}
